--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -34,6 +34,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: compile tests
         run: make build_tests
+      - name: set lib path
+        run: export LD_LIBRARY_PATH="$(pwd)/libs/myteams"
       - name: list tests
         run: ./unit_tests --list
       - name: run tests
