--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -34,12 +34,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: compile tests
         run: make build_tests
-      - name: set lib path
-        run: export LD_LIBRARY_PATH="$(pwd)/libs/myteams"
       - name: list tests
-        run: ./unit_tests --list
+        run: LD_LIBRARY_PATH="$(pwd)/libs/myteams" ./unit_tests --list
       - name: run tests
-        run: ./unit_tests
+        run: LD_LIBRARY_PATH="$(pwd)/libs/myteams" ./unit_tests
   push-epitech:
     needs: unit-test
     runs-on: ubuntu-latest
